--- a/fe_src/package.json
+++ b/fe_src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thorgene-app-fe",
+  "name": "thorgene-mweb-ios-fe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
