--- a/fe_src/package.json
+++ b/fe_src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thorgene-mweb-ios-fe",
+  "name": "thorgene-mweb-ios",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,14 +10,5 @@
   "license": "ISC",
   "dependencies": {
     "framework7": "^1.4.2"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-connect": "^4.0.0",
-    "gulp-htmlmin": "^2.0.0",
-    "gulp-less": "^3.0.5",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^1.5.3"
   }
 }
