--- a/fe_src/package.json
+++ b/fe_src/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-connect": "^4.0.0
+    "gulp-connect": "^4.0.0",
     "gulp-connect-proxy": "^0.3.1",
     "gulp-htmlmin": "^2.0.0",
     "gulp-less": "^3.0.5",
